# funcbot

./: LICENSE  README.md  config.yaml.example  ircbot.cabal
src/: Commands.hs  Config.hs  Connection.hs  Main.hs  Parser.hs
