name:                ircbot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/LunaticFairy/ircbot#readme
license:             BSD3
license-file:        LICENSE
author:              LunaticFairy
maintainer:          itsabiohazard@gmail.com
copyright:           Copyright: (c) 2016 LunaticFairy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ircbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, network, mtl, parsec, text, yaml
